feat(api): 支持上传初始化幂等键
